Split test jars into their own modules